--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-AUTH0_DOMAIN=devnw.us.auth0.com
-AUTH0_CLIENT_ID=udPLGD4ELNxtn10uTK39lFE4GfUrN7LL
-AUTH0_AUDIENCE=https://api.gopkgs.org
-AUTH0_CALLBACK_URL=http://localhost:8080/callback
-API_SERVER_URL=http://localhost:6060
-LOGO_SYMBOL_PATH=/images/logos/logo.svg
+REACT_APP_AUTH0_DOMAIN=devnw.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=udPLGD4ELNxtn10uTK39lFE4GfUrN7LL
+REACT_APP_AUTH0_AUDIENCE=https://api.gopkgs.org
+REACT_APP_AUTH0_CALLBACK_URL=http://localhost:8080/callback
+REACT_APP_API_SERVER_URL=http://localhost:6060
+REACT_APP_LOGO_SYMBOL_PATH=/images/logos/logo.svg
