Added the ability to copy a header link

--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ REACT_APP_AUTH0_AUDIENCE=https://api.gopkgs.org
 REACT_APP_AUTH0_CALLBACK_URL=https://gopkgs.org/callback
 REACT_APP_API_SERVER_URL=https://api.gopkgs.org:2096
 REACT_APP_GA_TRACKING_ID=G-TYXSYN1XLN
+REACT_APP_URL=https://gopkgs.org:3000
