--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_AUTH0_AUDIENCE=https://api.gopkgs.org
 REACT_APP_AUTH0_CALLBACK_URL=http://localhost:8080/callback
 REACT_APP_API_SERVER_URL=https://api.gopkgs.org:2096
 REACT_APP_LOGO_SYMBOL_PATH=/images/logos/logo.svg
+REACT_APP_URL=http://localhost:3000
