--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,38 +1,40 @@
 repos:
-  - repo: https://github.com/Contrast-Labs/detect-secrets
-    rev: v1.1.2
-    hooks:
-      - id: detect-secrets
-        name: Detect secrets
-        language: python
-        entry: detect-secrets-hook
-        args: ["--baseline", ".secrets.baseline"]
-  - repo: https://github.com/golangci/golangci-lint
-    rev: v1.43.0
-    hooks:
-      - id: golangci-lint
-  - repo: https://github.com/Bahjat/pre-commit-golang
-    rev: c3086eea8af86847dbdff2e46b85a5fe3c9d9656 # pragma: allowlist secret
-    hooks:
-      - id: go-unit-tests
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
-    hooks:
-      - id: check-json
-      - id: pretty-format-json
-        args: ["--autofix"]
-      - id: check-merge-conflict
-      - id: check-yaml
-      - id: check-toml
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.30.0
-    hooks:
-      - id: markdownlint-fix
-  - repo: https://github.com/koalaman/shellcheck-precommit
-    rev: v0.8.0
-    hooks:
-      - id: shellcheck
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v8.6.0" # Use the sha / tag you want to point at
-    hooks:
-      - id: eslint
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: 'v2.6.2'
+      hooks:
+          - id: prettier
+    - repo: https://github.com/Contrast-Labs/detect-secrets
+      rev: v1.1.2
+      hooks:
+          - id: detect-secrets
+            name: Detect secrets
+            language: python
+            entry: detect-secrets-hook
+            args: ['--baseline', '.secrets.baseline']
+    - repo: https://github.com/golangci/golangci-lint
+      rev: v1.43.0
+      hooks:
+          - id: golangci-lint
+    - repo: https://github.com/Bahjat/pre-commit-golang
+      rev: c3086eea8af86847dbdff2e46b85a5fe3c9d9656 # pragma: allowlist secret
+      hooks:
+          - id: go-unit-tests
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.0.1
+      hooks:
+          - id: check-json
+          - id: check-merge-conflict
+          - id: check-yaml
+          - id: check-toml
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.30.0
+      hooks:
+          - id: markdownlint-fix
+    - repo: https://github.com/koalaman/shellcheck-precommit
+      rev: v0.8.0
+      hooks:
+          - id: shellcheck
+    - repo: https://github.com/pre-commit/mirrors-eslint
+      rev: 'v8.6.0' # Use the sha / tag you want to point at
+      hooks:
+          - id: eslint
