--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: pre-commit/action@v2.0.3
     build:
         name: 'Build and Test'
+        needs: [pre-commit]
         runs-on: 'ubuntu-latest'
         steps:
             - name: Checkout code
