--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
       rev: v0.8.0
       hooks:
           - id: shellcheck
-    - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: 'v8.6.0' # Use the sha / tag you want to point at
-      hooks:
-          - id: eslint
+    # - repo: https://github.com/pre-commit/mirrors-eslint
+    #   rev: 'v8.6.0' # Use the sha / tag you want to point at
+    #   hooks:
+    #       - id: eslint
