--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: actions/setup-python@v3
+            - uses: actions/setup-python@v4
+              with:
+                  python-version: '3.x'
             - uses: pre-commit/action@v3.0.0
     build:
         name: 'Build and Test'
